--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 					<div class="row">
 						<section class="6u 12u(narrower) feature">
 							<div class="image-wrapper first">
-								<a href="http://kickstarter.com" class="image featured first"><img src="images/double-sided.jpg" alt="" /></a>
+								<a href="http://kck.st/1DCX9o1" class="image featured first"><img src="images/double-sided.jpg" alt="" /></a>
 							</div>
 							<header>
 								<h2>Double-sided
@@ -106,12 +106,12 @@
 						</section>
 						<section class="6u 12u(narrower) feature">
 							<div class="image-wrapper">
-								<a href="http://kck.st/1DCX9o1" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
+								<a href="http://kck.st/1DCX9o1" class="image featured"><img src="images/box-design.jpg" alt="" /></a>
 							</div>
 							<header>
-								<h2>Act it out!</h2>
+								<h2>Comes in a box. </h2>
 							</header>
-							<p>Words are hard. Act it out if necessary!</p>
+							<p>A box to hold your cards. You'll never lose a card in the laundry ever again.</p>
 							<ul class="actions">
 								<li><a href="http://kck.st/1DCX9o1" class="button">You know you want it</a></li>
 							</ul>
