--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 								<h2>Double-sided
 								</h2>
 							</header>
-							<p>So you can have the most fun in one card.</p>
+							<p>So you can have the most fun in one card.<br ></p>
 							<ul class="actions">
 								<li><a href="#" class="button">I just can't wait to be king</a></li>
 							</ul>
