--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
 					 <!-- Nav --> 
 						<nav id="nav">
 							<ul>
+								<li><a href="index.html">Home</a></li>
 								<li><a href="about.html">About</a></li>
-								<li><a href="#contact">Contact</a></li>
 								<li class="break"><a href="rules.html">Rules</a></li>
 								<li><a href="http://kck.st/1DCX9o1">Pre-Order Now</a></li>
 							</ul>
@@ -171,6 +171,7 @@
 						<h2>We're done convincing you</h2>
                         <p>Leave now. We're completely done with you.</p>
 					</header>
+				    <!--
 				    <h3 id="contact">Contact the evil overlords who created this game:</h3> <br />
 					<div class="row">
 						<section class="6u 12u(narrower)">
@@ -198,18 +199,9 @@
 								</div>
 							</form>
 						</section>
-<!--
-						<section class="6u 12u(narrower)">
-							<div class="row 50%">
-								<ul class="divided icons 6u 12u(mobile)">
-									<li class="icon fa-twitter"><a href="#"><span class="extra">Twitter</a></li>
-									<li class="icon fa-facebook"><a href="https://www.facebook.com/OOBthegame/">Facebook Page</a></li>
-								</ul>
-							</div>
-						</section>
--->
 					</div>
 				</div>
+				-->
 				<div id="copyright" class="container">
 					<ul class="menu">
 						<li>&copy;2015 Out of Bounds. All rights reserved.</li>
