--- a/rules.html
+++ b/rules.html
@@ -64,8 +64,8 @@
 					 <!-- Nav --> 
 						<nav id="nav">
 							<ul>
+								<li><a href="index.html">Home</a></li>
 								<li><a href="about.html">About</a></li>
-								<li><a href="#contact">Contact</a></li>
 								<li class="break"><a href="rules.html">Rules</a></li>
 								<li><a href="http://kck.st/1DCX9o1">Pre-Order Now</a></li>
 							</ul>
@@ -108,6 +108,7 @@
 						<h2>We're done convincing you</h2>
                         <p>Leave now. We're completely done with you.</p>
 					</header>
+				    <!--
 				    <h3 id="contact">Contact the evil overlords who created this game:</h3> <br />
 					<div class="row">
 						<section class="6u 12u(narrower)">
@@ -135,10 +136,9 @@
 								</div>
 							</form>
 						</section>
-
-						
 					</div>
 				</div>
+				-->
 				<div id="copyright" class="container">
 					<ul class="menu">
 						<li>&copy;2015 Out of Bounds. All rights reserved.</li>
