added responsiveness to chrome

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<meta name="HandheldFriendly" content="true" />
 		<meta name="description" content="Out of Bounds is the game which encourages you to embrace your inner id. Ol' Sigmund Freud would be so proud!" />
 		<meta name="keywords" content="buy party card cards game games kickstarter horrible adult dank memes steel beams" />
-		<meta name="viewport" content"width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+		<meta name=viewport content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
 
 		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
 		<script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
