removed last names

--- a/about.html
+++ b/about.html
@@ -86,7 +86,7 @@
 								<a href="#" class="image featured"><img src="images/adam.jpg" alt="" /></a>
 							</div>
 							<header>
-								<h3>Adam Rapfogel</h3> <h5><i>Tufts University</i></h5>
+								<h3>Adam</h3> <h5><i>Tufts University</i></h5>
 							</header>
 							<p>A current freshman, Adam is awfully full of himself. He's the guy who spends time chuckling at the descriptions he writes (including this one) and tries to act like he's way older than 18. He's also super into Freud for some reason.</p>
 						</section>
@@ -95,7 +95,7 @@
 								<a href="#" class="image featured"><img src="images/andrew.jpg" alt="" /></a>
 							</div>
 							<header>
-								<h3>Andrew Wong</h3> <h5><i>Johns Hopkins University</i></h5>
+								<h3>Andrew</h3> <h5><i>Johns Hopkins University</i></h5>
 							</header>
 							<p>Also a current freshman, Andy is the tech guy. He knows his way around Photoshop and Illustrator like nobody's business, and he's also a total ladies man.</p>
 						</section>
@@ -106,7 +106,7 @@
 								<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
 							</div>
 							<header>
-								<h3>Austin Chen</h3> <h5><i>New York University</i></h5>
+								<h3>Austin</h3> <h5><i>New York University</i></h5>
 							</header>
 							<p>Austin is also a current freshman, but nobody really likes him, so don't worry too much about him.</p>
 						</section>
@@ -115,7 +115,7 @@
 								<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
 							</div>
 							<header>
-								<h3>Zach Canelos</h3> <h5><i>Fordham University</i></h5>
+								<h3>Zach</h3> <h5><i>Fordham University</i></h5>
 							</header>
 							<p>Yet another current frosh, Zach is a real straight shooter. You wouldn't know it upon meeting him, but he's really got a knack for developing this sort of game.</p>
 						</section>
@@ -124,7 +124,7 @@
 								<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
 							</div>
 							<header>
-								<h3>Yanal Matari</h3> <h5><i>New York University</i></h5>
+								<h3>Yanal</h3> <h5><i>New York University</i></h5>
 							</header>
 							<p>Another freshman, Yanal is basically our target audience. He's made suggestions which were too over the top for us to include in this very explicit game, and he's enjoyed the process of putting this all together almost too much.</p>
 						</section>
