--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="HandheldFriendly" content="true" />
 		<meta name="description" content="Out of Bounds is the game which encourages you to embrace your inner id. Ol' Sigmund Freud would be so proud!" />
-		<meta name="keywords" content="buy party card cards game games kickstarter horrible adult dank memes steel beams" />
+		<meta name="keywords" content="out of bounds outofbounds party card cards game games kickstarter horrible adult dank memes steel beams" />
 		<meta name=viewport content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no">
 
 		<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
@@ -18,21 +18,6 @@
 		<script src="js/skel-layers.min.js"></script>
 		<script src="js/init.js"></script>
 		
-		<!-- Kissmetrics tracking snippet -->
-        <script type="text/javascript">var _kmq = _kmq || [];
-        var _kmk = _kmk || '6c841f457a4b5e5da05ff0dd17bd22d3d6682700';
-        function _kms(u){
-          setTimeout(function(){
-            var d = document, f = d.getElementsByTagName('script')[0],
-            s = d.createElement('script');
-            s.type = 'text/javascript'; s.async = true; s.src = u;
-            f.parentNode.insertBefore(s, f);
-          }, 1);
-        }
-        _kms('//i.kissmetrics.com/i.js');
-        _kms('//scripts.kissmetrics.com/' + _kmk + '.2.js');
-        </script>
-        
 		<!-- Google ANalytics -->
 		<script>
           (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -106,7 +91,7 @@
 						</section>
 						<section class="6u 12u(narrower) feature">
 							<div class="image-wrapper">
-								<a href="http://kck.st/1DCX9o1" class="image featured"><img src="images/box-design.jpg" alt="" /></a>
+								<a href="http://kck.st/1DCX9o1" class="image featured"><img src="images/box-design.png" alt="" /></a>
 							</div>
 							<header>
 								<h2>Comes in a box. </h2>
