update less offensive footer

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 						</section>
 					</div>
 					<ul class="actions major">
-						<li><a href="http://kck.st/1DCX9o1" class="button">Just buy it already...</a></li>
+						<li><a href="http://kck.st/1DCX9o1" class="button">Check Us Out!</a></li>
 					</ul>
 				</section>
 			</div>		
@@ -183,8 +183,10 @@
 
 								
 					<header class="major">
-						<h2>We're done convincing you</h2>
-                        <p>Leave now. We're completely done with you.</p>
+						<h2>Thanks for visiting!</h2><br>
+                        <ul class="actions major">
+						<li><a href="http://kck.st/1DCX9o1" class="button">Check Us Out on Kickstarter!</a></li>
+					    </ul>
 					</header>
 
 				<div id="copyright" class="container">
