--- a/rules.html
+++ b/rules.html
@@ -99,48 +99,46 @@
 		<!-- Footer -->
 			<div id="footer-wrapper">
 				<div id="footer" class="container">
+				<header class="major">
+                    <form action="//xyz.us12.list-manage.com/subscribe/post?u=ec080e1c69e8e4a31a9eebb4c&amp;id=333d83449c" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                        <div class="row 50%">
+                           <div class="2u"></div>
+                            <div class="8u 12u$">
+                                <h2>Keep in touch</h2><br>
+                                <input type="text" value = "" placeholder="First Name" name="FNAME" class="" id="mce-FNAME">
+                                <input type="text" value = "" placeholder="Last Name" name="LNAME" class="" id="mce-LNAME">
+                                <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+                            </div>
+                            <div class="2u"></div>
+                            <div class="12u">
+                                <ul class="actions">
+                                   <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                                    <div style="position: absolute; left: -5000px;" aria-hidden="true">
+                                        <input type="text" name="b_ec080e1c69e8e4a31a9eebb4c_333d83449c" tabindex="-1" value="">
+                                    </div>
+                                    <div class="clear">
+                                    <li><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe"/></li>
+                                </ul>
+                            </div>
+                        </div>
+                        </div>
+                    </form>
+                </header>
+
+								
 					<header class="major">
-						<h2>We're done convincing you</h2>
-                        <p>Leave now. We're completely done with you.</p>
+						<h2>Thanks for visiting!</h2><br>
+                        <ul class="actions major">
+						<li><a href="http://kck.st/1DCX9o1" class="button">Check Us Out on Kickstarter!</a></li>
+					    </ul>
 					</header>
-				    <!--
-				    <h3 id="contact">Contact the evil overlords who created this game:</h3> <br />
-					<div class="row">
-						<section class="6u 12u(narrower)">
-							<form action="#" method="POST">
-								<div class="row 50%">
-									<div class="6u 12u(mobile)">
-										<input name="name" placeholder="Name" type="text" required />
-									</div>
-									<div class="6u 12u(mobile)">
-										<input name="_replyto" placeholder="Email" type="text" required />
-									</div>
-								</div>
-								<div class="row 50%">
-									<div class="12u">
-										<textarea name="message" placeholder="Message" required></textarea>
-									</div>
-								</div>
-								<div class="row 50%">
-									<div class="12u">
-										<ul class="actions">
-											<li><input type="submit" value="Send Message" /></li>
-											<li><input type="reset" value="Clear form" /></li>
-										</ul>
-									</div>
-								</div>
-							</form>
-						</section>
-					</div>
-				</div>
-				-->
+
 				<div id="copyright" class="container">
 					<ul class="menu">
 						<li>&copy;2015 Out of Bounds. All rights reserved.</li>
 					</ul>
 				</div>
 			</div>
-
 
 	</body>
 </html>
