--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 					<header class="major">
 						<h2>Thanks for visiting!</h2><br>
                         <ul class="actions major">
-						<li><a href="http://kck.st/1DCX9o1" class="button">Check Us Out on Kickstarter!</a></li>
+						<li><a href="http://kck.st/1DCX9o1" class="button">Check us out on Kickstarter!</a></li>
 					    </ul>
 					</header>
 
