--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 				<section class="container">
 					<header class="major">
 						<h2>Still not convinced?</h2>
-						<p>Here are some reviews:</p>
+						<p>Here are what our fans think: </p>
 					</header>
 					<div class="row features">
 						<section class="4u 12u(narrower) feature">
