add mateo review

--- a/index.html
+++ b/index.html
@@ -128,21 +128,21 @@
 							<div class="image-wrapper first">
 								<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
 							</div>
-							<h3>Zachary</h3> <br /><br />
+							<h3>Zachary</h3> <br />
 							<p>It's such a game. </p>
 						</section>
 						<section class="4u 12u(narrower) feature">
 							<div class="image-wrapper">
 								<a href="http://kck.st/1DCX9o1" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
 							</div>
-							<h3>Mateo</h3> <br /><br />
-							<p>It's a great game, treat yo 'self.</p>
+							<h3>Mateo</h3> <br />
+							<p>Out of Bounds is an exercise in hilarity. I can personally testify to the hours of fun we've had playtesting it. Just a warning, it's not for the faint of heart!</p>
 						</section>
 						<section class="4u 12u(narrower) feature">
 							<div class="image-wrapper">
 								<a href="http://kck.st/1DCX9o1" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
 							</div>
-							<h3>Jake from State Farm</h3> <br /><br />
+							<h3>Jake from State Farm</h3> <br />
 							<p>This game really inspired me to continue wearing khakis in the workplace. </p>
 						</section>
 					</div>
