--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 			</div>
 
 		<!-- Features 2 -->
-			<div class="wrapper">
+			<div class="wrapper" id="reviews">
 				<section class="container">
 					<header class="major">
 						<h2>Still not convinced?</h2>
@@ -142,7 +142,7 @@
 							<div class="image-wrapper">
 								<a href="http://kck.st/1DCX9o1" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
 							</div>
-							<h3>Jake from State Farm</h3> <br />
+							<h3>Jake</h3> <br />
 							<p>This game really inspired me to continue wearing khakis in the workplace. </p>
 						</section>
 					</div>
