--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 						</section>
 						<section class="4u 12u(narrower) feature">
 							<div class="image-wrapper">
-								<a href="http://kck.st/1DCX9o1" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
+								<a href="http://kck.st/1DCX9o1" class="image featured"><img src="images/matthew.jpg" alt="" /></a>
 							</div>
 							<h3>Mateo</h3> <br />
 							<p>Out of Bounds is an exercise in hilarity. I can personally testify to the hours of fun we've had playtesting it. Just a warning, it's not for the faint of heart!</p>
