--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 								<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
 							</div>
 							<h3>Zachary</h3> <br />
-							<p>It's such a game. </p>
+							<p>It's such a game. I would bring it to a Mount Jamaica vacation with my friends and me.</p>
 						</section>
 						<section class="4u 12u(narrower) feature">
 							<div class="image-wrapper">
