--- a/index.html
+++ b/index.html
@@ -158,14 +158,14 @@
 				<header class="major">
                     <form action="//xyz.us12.list-manage.com/subscribe/post?u=ec080e1c69e8e4a31a9eebb4c&amp;id=333d83449c" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                         <div class="row 50%">
-                           <div class="2u"></div>
+                           <div class="2u 12u$"></div>
                             <div class="8u 12u$">
                                 <h2>Keep in touch</h2><br>
                                 <input type="text" value = "" placeholder="First Name" name="FNAME" class="" id="mce-FNAME">
                                 <input type="text" value = "" placeholder="Last Name" name="LNAME" class="" id="mce-LNAME">
                                 <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
                             </div>
-                            <div class="2u"></div>
+                            <div class="2u 12u$"></div>
                             <div class="12u">
                                 <ul class="actions">
                                    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
