--- a/index.html
+++ b/index.html
@@ -159,8 +159,8 @@
                     <form action="//xyz.us12.list-manage.com/subscribe/post?u=ec080e1c69e8e4a31a9eebb4c&amp;id=333d83449c" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                         <div class="row 50%">
                            <div class="2u"></div>
-                            <div class="8u">
-                                <h2>Keep in touch</h2><br>
+                            <div class="8u 12u$">
+                                <h2>Keep in touch</h2><br><br>
                                 <input type="text" value = "" placeholder="First Name" name="FNAME" class="" id="mce-FNAME">
                                 <input type="text" value = "" placeholder="Last Name" name="LNAME" class="" id="mce-LNAME">
                                 <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
