--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@
 							<div class="image-wrapper">
 								<a href="http://kck.st/1DCX9o1" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
 							</div>
-							<h3>Jake</h3> <br />
-							<p>This game really inspired me to continue wearing khakis in the workplace. </p>
+							<h3>Emma</h3> <br />
+							<p>Blah blah blah  </p>
 						</section>
 					</div>
 					<br>
@@ -161,7 +161,7 @@
                         <div class="row 50%">
                            <div class="2u"></div>
                             <div class="8u 12u$">
-                                <h2>Keep in touch</h2><br><br>
+                                <h3>Sign up for our email list and receive a free 36-card PDF version of the game pre-launch!</h3><br>
                                 <input type="text" value = "" placeholder="First Name" name="FNAME" class="" id="mce-FNAME">
                                 <input type="text" value = "" placeholder="Last Name" name="LNAME" class="" id="mce-LNAME">
                                 <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
