--- a/about.html
+++ b/about.html
@@ -18,20 +18,6 @@
 		<script src="js/skel-layers.min.js"></script>
 		<script src="js/init.js"></script>
 		
-		<!-- Kissmetrics tracking snippet -->
-        <script type="text/javascript">var _kmq = _kmq || [];
-        var _kmk = _kmk || '6c841f457a4b5e5da05ff0dd17bd22d3d6682700';
-        function _kms(u){
-          setTimeout(function(){
-            var d = document, f = d.getElementsByTagName('script')[0],
-            s = d.createElement('script');
-            s.type = 'text/javascript'; s.async = true; s.src = u;
-            f.parentNode.insertBefore(s, f);
-          }, 1);
-        }
-        _kms('//i.kissmetrics.com/i.js');
-        _kms('//scripts.kissmetrics.com/' + _kmk + '.2.js');
-        </script>
         
 		<!-- Google ANalytics -->
 		<script>
@@ -66,7 +52,8 @@
 								<li><a href="index.html">Home</a></li>
 								<li><a href="about.html">About</a></li>
 								<li class="break"><a href="rules.html">Rules</a></li>
-								<li><a href="http://kck.st/1DCX9o1">Pre-Order Now</a></li>
+                                <!-- <li><a href="http://kck.st/1DCX9o1">Pre-Order Now</a></li>-->
+                                <li><a href="https://ksr-video.imgix.net/projects/2017105/video-623534-h264_high.mp4">Preview</a></li>
 							</ul>
 						</nav>
 						
@@ -165,7 +152,7 @@
 					<header class="major">
 						<h2>Thanks for visiting!</h2><br>
                         <ul class="actions major">
-						<li><a href="http://kck.st/1DCX9o1" class="button">Check us out on Kickstarter!</a></li>
+						<li><a href="https://ksr-video.imgix.net/projects/2017105/video-623534-h264_high.mp4" class="button">Check us out on Kickstarter!</a></li>
 					    </ul>
 					</header>
 
