--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
 								<li><a href="about.html">About</a></li>
 								<li class="break"><a href="rules.html">Rules</a></li>
                                 <!-- <li><a href="http://kck.st/1DCX9o1">Pre-Order Now</a></li>-->
-                                <li><a href="https://ksr-video.imgix.net/projects/2017105/video-623534-h264_high.mp4">Preview</a></li>
+                                <li><a href="https://ksr-video.imgix.net/projects/2017105/video-623534-h264_high.mp4">Preview Video</a></li>
 							</ul>
 						</nav>
 						
