--- a/rules.html
+++ b/rules.html
@@ -114,11 +114,30 @@
 
 								
 					<header class="major">
-						<h2>Thanks for visiting!</h2><br>
-                        <ul class="actions major">
-						<li><a href="http://kck.st/1DCX9o1" class="button">Check us out on Kickstarter!</a></li>
-					    </ul>
-					</header>
+                    <form action="//xyz.us12.list-manage.com/subscribe/post?u=ec080e1c69e8e4a31a9eebb4c&amp;id=333d83449c" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                        <div class="row 50%">
+                           <div class="2u"></div>
+                            <div class="8u 12u$">
+                                <h3>Sign up for our email list and receive a free 36-card PDF version of the game pre-launch!</h3><br>
+                                <input type="text" value = "" placeholder="First Name" name="FNAME" class="" id="mce-FNAME">
+                                <input type="text" value = "" placeholder="Last Name" name="LNAME" class="" id="mce-LNAME">
+                                <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+                            </div>
+                            <div class="2u"></div>
+                            <div class="12u">
+                                <ul class="actions">
+                                   <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                                    <div style="position: absolute; left: -5000px;" aria-hidden="true">
+                                        <input type="text" name="b_ec080e1c69e8e4a31a9eebb4c_333d83449c" tabindex="-1" value="">
+                                    </div>
+                                    <div class="clear">
+                                    <li><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe"/></li>
+                                </ul>
+                            </div>
+                        </div>
+                        </div>
+                    </form>
+                </header>
 
 				<div id="copyright" class="container">
 					<ul class="menu">
