--- a/about.html
+++ b/about.html
@@ -90,7 +90,7 @@
 					<div class="row features">
 						<section class="4u 12u(narrower) feature">
 							<div class="image-wrapper">
-								<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
+								<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
 							</div>
 							<header>
 								<h3>Austin</h3> <h5><i>New York University</i></h5>
@@ -108,7 +108,7 @@
 						</section>
 						<section class="4u 12u(narrower) feature">
 							<div class="image-wrapper">
-								<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
+								<a href="#" class="image featured"><img src="images/yanal.jpg" alt="" /></a>
 							</div>
 							<header>
 								<h3>Yanal</h3> <h5><i>New York University</i></h5>
