--- a/index.html
+++ b/index.html
@@ -143,8 +143,8 @@
 							<div class="image-wrapper">
 								<a href="http://kck.st/1DCX9o1" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
 							</div>
-							<h3>Emma</h3> <br />
-							<p>Blah blah blah  </p>
+							<h3>Ryan</h3> <br />
+							<p>Such a fun game, even more fun if you have a dirty mind. The less filters you have, the better it gets!</p>
 						</section>
 					</div>
 					<br>
