--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 								<a href="http://kck.st/1DCX9o1" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
 							</div>
 							<h3>Ryan</h3> <br />
-							<p>Such a fun game, even more fun if you have a dirty mind. The less filters you have, the better it gets!</p>
+							<p>Such a fun game, even more fun if you have a dirty mind. The fewer filters you have, the better it gets!</p>
 						</section>
 					</div>
 					<br>
