--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 						</section>
 						<section class="4u 12u(narrower) feature">
 							<div class="image-wrapper">
-								<a href="http://kck.st/1DCX9o1" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
+								<a href="http://kck.st/1DCX9o1" class="image featured"><img src="images/ryan.jpg" alt="" /></a>
 							</div>
 							<h3>Ryan</h3> <br />
 							<p>Such a fun game, even more fun if you have a dirty mind. The fewer filters you have, the better it gets!</p>
