--- a/about.html
+++ b/about.html
@@ -99,7 +99,7 @@
 						</section>
 						<section class="4u 12u(narrower) feature">
 							<div class="image-wrapper first">
-								<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+								<a href="#" class="image featured"><img src="images/zach.jpg" alt="" /></a>
 							</div>
 							<header>
 								<h3>Zach</h3> <h5><i>Fordham University</i></h5>
