--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 					<div class="row features">
 						<section class="4u 12u(narrower) feature">
 							<div class="image-wrapper first">
-								<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
+								<a href="#" class="image featured"><img src="images/zach.jpg" alt="" /></a>
 							</div>
 							<h3>Zachary</h3> <br />
 							<p>It's such a game. I would bring it to a Mount Jamaica vacation with my friends and me.</p>
